build: require C++17 and remove toolchain warnings